2003-06-13  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Remove popt (not gnome software), gnomeicu
	  from gnome-1.4 (no future release), mlview from gnome-2.4 (doesn't
	  belong).

2003-06-13  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Move drgenius and sodipodi to gnome-2.4.
	  Fix pot name for gedit HEAD.

2003-06-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-mud.

2003-06-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added back gtranslator.

2003-06-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-netstatus.

2003-06-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: nautilus-media has been branched for
	gnome-2-2.

2003-06-05  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: gnome-system-tools is in fifth-toe now.
	  Remove gnome-print-admin entirely, since its functionality has
	  already been mereged into gnome-print during GNOME 1.4 days.

2003-05-30  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Changed gedit-plugins pot name.

2003-05-29  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added genius.

2003-05-23  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed fontilus. It's now part
	of gnome-control-center.

2003-05-21  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Removed dedit, as suggested by Ole Laursen.

2003-05-20  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: One new gnome-spell release, one new pot name.

2003-05-20  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Changed anjuta branch on Naba's request.

2003-05-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added drwright.

2003-05-17  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Added gtksourceview.

2003-05-16  Abel Cheung  <maddog@linux.org.hk>
