@@ -281,12 +281,12 @@
       </component>
     </version>
   </module>
-  <module name="drgenius">
+  <module name="drgeo">
     <version release="gnome-2.4">
-      <component name="drgenius2" dir="drgenius2" group="extras">
+      <component name="drgeo" dir="drgeo" group="extras">
 	<podir dir="po"/>
 	<potname name="drgenius.pot"/>
-	<branch name="gnome2-port"/>
+	<branch name="HEAD"/>
 	<regenerate/>
 	<download/>
       </component>
