@@ -1,3 +1,7 @@
+2003-06-16  Abel Cheung  <maddog@linux.org.hk>
+
+	* translation-status.xml: drgenius2 becomes drgeo.
+
 2003-06-13  Abel Cheung  <maddog@linux.org.hk>
 
 	* translation-status.xml: Remove popt (not gnome software), gnomeicu
